# BackupAw

./: .gitignore  BackupAw-1.5_sdk100.nsi  BackupAw-1.5_sdk41.nsi  BackupAw-1.5_sdk93.nsi  BackupAw-1.6_sdk41.nsi  BackupAw_sdk101.nsi  BackupAw_sdk131.nsi  Backupvp-1_6.nsi  Backupvp-1_6_Beta.nsi  Backupvp.nsi  Backupvp_x64.nsi  CMakeLists.txt  INSTALL  Info_cocoa.plist  LICENSE  README.md  Release101.props  ReleaseVP.props  backupaw.cbp  backupaw.sln  backupaw.vcxproj  backupaw.vcxproj.filters  backupvp.xpm  common.props
Debug_sdk131/lng/en/: backup.mo
Debug_sdk131/lng/fr/: backup.po
Debug_sdk131/lng/it/: backup.po
Static/Images.xcassets/AppIcon.appiconset/: Contents.json
backupvp.xcodeproj/: project.pbxproj
backupvp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
backupvp.xcodeproj/project.xcworkspace/xcshareddata/: backupvp.xccheckout
backupvp.xcodeproj/project.xcworkspace/xcuserdata/gianni.xcuserdatad/: UserInterfaceState.xcuserstate
backupvp.xcodeproj/xcuserdata/gianni.xcuserdatad/xcschemes/: static.xcscheme  xcschememanagement.plist
hlp/: hlp.mdb
hlp/html/: index.htm  style2.archidoc.css  style2.hhc.css  top.htm
hlp/html/fr/: Copie de hlp-fr.chm  ID1010.htm  ID1012.htm  ID1014.htm  ID1016.htm  ID1018.htm  ID1020.htm  ID1022.htm  ID1024.htm  ID1026.htm  ID1028.htm  ID1030.htm  ID1032.htm  ID1034.htm  ID1036.htm  ID1038.htm  ID1040.htm  ID1042.htm  ID1044.htm  ID1046.htm  ID1048.htm  ID1050.htm  ID1054.htm  ID1056.htm  _bin.htm  _errlog.txt  _hhc.hhc  _hhk.hhk  _hhp.hhp  _pop.js  _printable.htm  _toc.htm  _toc.xml  _xmltmp.xml  ad_popcss.css  ad_popprg.js  f-index.xml  index.htm  style1.archidoc.css  style1.css_toc.css
icones/: backupaw.xpm  earth.xpm  earth1.xpm  earth2.xpm  earth3.xpm  earth4.xpm  earth5.xpm  earthd.xpm  loupe_m.xpm  loupe_p.xpm  target.xpm
include/: AboutBox.h  AwObject.h  CBackupCtrl.h  CBackupVP.h  CBot.h  CBuild.h  CCoord.h  CDelete.h  CFilter.h  CGeometry.h  CModify.h  COutils.h  CQuaternion.h  Cpasspriv.h  CtrlCell.h  CtrlLog.h  Ctrlaw.h  Global.h  MainApp.h  MainFrame.h  MapCanvas.h  OptionBox.h  ToolBook.h
lng/en/: backup.po  backupaw.mo  backupaw.po
lng/fr/: backup.mo  backup.po  backupaw.mo  backupaw.po
lng/it/: backup.mo  backupaw.mo  backupaw.po
src/: AboutBox.cpp  AwObject.cpp  CBackupCtrl.cpp  CBackupVP.cpp  CBot.cpp  CBuild.cpp  CCoord.cpp  CDelete.cpp  CFilter.cpp  CGeometry.cpp  CModify.cpp  COutils.cpp  Cpasspriv.cpp  CtrlCell.cpp  CtrlLog.cpp  Ctrlaw.cpp  MainApp.cpp  MainFrame.cpp  MapCanvas.cpp  OptionBox.cpp  Ressources.rc  ToolBook.cpp
